--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "9f2e4ef8",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
     "    if res.ok:\n",
     "        html = res.text\n",
     "        soup = BeautifulSoup(html, \"html.parser\")\n",
-    "        a_tag_list = soup.select(\"div.sa_text a[href*='mnews/article/']\")\n",
+    "        a_tag_list = soup.select(\"div.sa_text a[href*='mnews/article/0']\")\n",
     "        for a_tag in a_tag_list:\n",
     "            title = a_tag.text.strip()\n",
     "            link = a_tag[\"href\"]\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "858952c6",
    "metadata": {},
    "outputs": [
@@ -311,94 +311,39 @@
      "output_type": "stream",
      "text": [
       "======= Section: 경제 =======\n",
-      "중앙아시아·유럽으로 넓어지는 韓 우주협력 영토 https://n.news.naver.com/mnews/article/029/0002946563\n",
-      " https://n.news.naver.com/mnews/article/comment/029/0002946563\n",
-      "SKT, 금융사·에이닷에 'AI 보이스피싱 탐지 기술' 적용 https://n.news.naver.com/mnews/article/014/0005332635\n",
-      " https://n.news.naver.com/mnews/article/comment/014/0005332635\n",
-      "항생제도 안 듣는 슈퍼박테리아, 금 나노입자로 사멸한다 https://n.news.naver.com/mnews/article/008/0005177469\n",
-      " https://n.news.naver.com/mnews/article/comment/008/0005177469\n",
-      "“1초 만에 99.5% 정확도로 상품인식” 신세계아이앤씨,  ‘AI 설루션’ 고도화 https://n.news.naver.com/mnews/article/016/0002453935\n",
-      " https://n.news.naver.com/mnews/article/comment/016/0002453935\n",
-      "“전국민에 맞는 AI 5000만개 보급할 것”…뤼튼, ‘생활형 AI’ 시대 연다 https://n.news.naver.com/mnews/article/016/0002454308\n",
-      " https://n.news.naver.com/mnews/article/comment/016/0002454308\n",
-      "카카오메이커스, 누적 거래액 1조원 돌파…‘거래액 빠르게 증가’ https://n.news.naver.com/mnews/article/009/0005472605\n",
-      " https://n.news.naver.com/mnews/article/comment/009/0005472605\n",
-      "갤S25, 카메라로 AI랑 대화한다…'실시간 비주얼 AI' 도입 https://n.news.naver.com/mnews/article/003/0013169545\n",
-      " https://n.news.naver.com/mnews/article/comment/003/0013169545\n",
-      "스팸 문자 사전 차단 '엑스레이 서비스' 9일 시범 도입 https://n.news.naver.com/mnews/article/055/0001247439\n",
-      " https://n.news.naver.com/mnews/article/comment/055/0001247439\n",
-      "한화오션, 차세대 드릴십 인도…심해 시추 본격 진출 https://n.news.naver.com/mnews/article/092/0002369836\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369836\n",
       "“보여주면 알아서 설명” 삼성, 갤럭시 S25에 ‘실시간 비주얼 AI’ 도입 https://n.news.naver.com/mnews/article/018/0005982544\n",
-      " https://n.news.naver.com/mnews/article/comment/018/0005982544\n",
-      "\"5G 투자회수도 멀었는데\"…글로벌 통신업계 '6G' 회의론 https://n.news.naver.com/mnews/article/008/0005177554\n",
-      " https://n.news.naver.com/mnews/article/comment/008/0005177554\n",
-      "삼성 1분기 실적 효자는 '갤S25'…2Q '슬림' 판매량 관건 https://n.news.naver.com/mnews/article/014/0005332970\n",
-      " https://n.news.naver.com/mnews/article/comment/014/0005332970\n",
-      "영화 'HER' 속 사만사처럼…뤼튼의 '1인 1AI' 전략 https://n.news.naver.com/mnews/article/648/0000035139\n",
-      " https://n.news.naver.com/mnews/article/comment/648/0000035139\n",
-      "[현장] \"AI, 이제 도구가 아닌 친구\"…뤼튼, '1인 1AI' 시대 연다 https://n.news.naver.com/mnews/article/092/0002369831\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369831\n",
-      "리플 \"전 세계 금융 시장, 실물자산 토큰화 중심으로 근본 변화\" https://n.news.naver.com/mnews/article/092/0002369827\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369827\n",
-      "당뇨·비만 치료제가 치매 위험 33~43% 낮춘다 https://n.news.naver.com/mnews/article/366/0001067652\n",
-      " https://n.news.naver.com/mnews/article/comment/366/0001067652\n",
-      "에이비엘바이오, '4조 기술이전' 후 첫 공식석상…로드맵 밝힌다 https://n.news.naver.com/mnews/article/421/0008180569\n",
-      " https://n.news.naver.com/mnews/article/comment/421/0008180569\n",
-      "한국계 NASA 우주인 조니 김 태운 러 우주선, ISS로 발사 https://n.news.naver.com/mnews/article/023/0003898288\n",
-      " https://n.news.naver.com/mnews/article/comment/023/0003898288\n",
-      "“韓 AI 선진국 위해 'AI기술'보다 데이터 확보가 필요” https://n.news.naver.com/mnews/article/030/0003301377\n",
-      " https://n.news.naver.com/mnews/article/comment/030/0003301377\n",
-      "\"의료계 제안 논의하자\"…의협, 정부·국회에 '대화의 장' 요구 https://n.news.naver.com/mnews/article/421/0008180565\n",
-      " https://n.news.naver.com/mnews/article/comment/421/0008180565\n",
-      "질병청-녹십자 개발 '탄저백신' 품목허가 \"백신주권 확립\" https://n.news.naver.com/mnews/article/014/0005332936\n",
-      " https://n.news.naver.com/mnews/article/comment/014/0005332936\n",
-      "항암제 피하는 암세포 꼼수 발견…악성 폐암도 잡는다 https://n.news.naver.com/mnews/article/081/0003531724\n",
-      " https://n.news.naver.com/mnews/article/comment/081/0003531724\n",
-      "뤼튼 \"무료전략으로 생활형 AI 시대 열 것…올해 천만 MAU 목표\" https://n.news.naver.com/mnews/article/421/0008180537\n",
-      " https://n.news.naver.com/mnews/article/comment/421/0008180537\n",
-      "첫 한국계 ‘NASA 우주비행사’ 조니 김, 마침내 지구 궤도로 떠났다 https://n.news.naver.com/mnews/article/032/0003361993\n",
-      " https://n.news.naver.com/mnews/article/comment/032/0003361993\n",
-      "질병청, 세계 첫 단백질 재조합 탄저백신 '배리트락스' 상용화 https://n.news.naver.com/mnews/article/015/0005116525\n",
-      " https://n.news.naver.com/mnews/article/comment/015/0005116525\n",
-      "트럼프 관세, 세계경제 큰 타격…美中 충돌로 더 증폭 https://n.news.naver.com/mnews/article/092/0002369818\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369818\n",
-      "[100세 과학] 노년 건강 유지엔 채식보다 육식 https://n.news.naver.com/mnews/article/366/0001067643\n",
-      " https://n.news.naver.com/mnews/article/comment/366/0001067643\n",
-      "[사고]스테이블코인 vs CBDC…디지털금융 대세는 어디로? https://n.news.naver.com/mnews/article/018/0005982461\n",
-      " https://n.news.naver.com/mnews/article/comment/018/0005982461\n",
-      "폐암 면역치료 새 전략 찾았다…면역항암 막는 핵심인자 최초로 발견 https://n.news.naver.com/mnews/article/021/0002701758\n",
-      " https://n.news.naver.com/mnews/article/comment/021/0002701758\n",
-      "\"갤럭시S26 울트라, 카메라 사양 등 전작과 큰 변화 없다\" https://n.news.naver.com/mnews/article/092/0002369817\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369817\n",
-      "구영배 \"위시 살려야\" 주장에 피해자들 분통…\"차라리 처벌 받아라\" https://n.news.naver.com/mnews/article/092/0002369816\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369816\n",
-      "관세 폭탄에 스마트폰 공장 美로 옮긴다?…\"가능성 희박\" https://n.news.naver.com/mnews/article/092/0002369815\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369815\n",
-      "전국에 딱 500대만 풀린다…'한정판 갤럭시S25'의 정체 https://n.news.naver.com/mnews/article/015/0005116508\n",
-      " https://n.news.naver.com/mnews/article/comment/015/0005116508\n",
-      "[6G 코리아] ④ 이통3사, AI-RAN 시장 개척 주도 https://n.news.naver.com/mnews/article/030/0003301337\n",
-      " https://n.news.naver.com/mnews/article/comment/030/0003301337\n",
-      "한바이오 \"모유두세포로 탈모 정복하겠다\" https://n.news.naver.com/mnews/article/015/0005116502\n",
-      " https://n.news.naver.com/mnews/article/comment/015/0005116502\n",
-      "뤼튼, 감정 교류도 하는 'AI 비서' 낸다 https://n.news.naver.com/mnews/article/293/0000065879\n",
-      " https://n.news.naver.com/mnews/article/comment/293/0000065879\n",
-      "온라인서 예금토큰 결제 지연…9일부터 순차적으로 진행 https://n.news.naver.com/mnews/article/092/0002369813\n",
-      " https://n.news.naver.com/mnews/article/comment/092/0002369813\n",
-      "법인 가상자산 투자 허용, 금융 생태계 지각변동 예고...우덕수 블록데몬 아시아 대표 “기관 대상 상품 본격화” https://n.news.naver.com/mnews/article/030/0003301326\n",
-      " https://n.news.naver.com/mnews/article/comment/030/0003301326\n",
-      "美와 AI 격차 좁힌 中…한국은 AI 투자 줄어 https://n.news.naver.com/mnews/article/366/0001067631\n",
-      " https://n.news.naver.com/mnews/article/comment/366/0001067631\n",
-      "LS전선, 대한전선 상대 특허 최종 승소…양측 상고 포기 https://n.news.naver.com/mnews/article/030/0003301320\n",
-      " https://n.news.naver.com/mnews/article/comment/030/0003301320\n",
-      "사람 태워 산속 누빈다... 늑대 닮은 日 4족보행 로봇 공개 https://n.news.naver.com/mnews/article/023/0003898272\n",
-      " https://n.news.naver.com/mnews/article/comment/023/0003898272\n",
-      "삼성전자 시장예상 뛰어넘은 1분기 실적...매출 79조·영업익 6.6조 https://n.news.naver.com/mnews/article/030/0003301315\n",
-      " https://n.news.naver.com/mnews/article/comment/030/0003301315\n",
-      "'2인 체제' 방통위 논란 여전…이대로면 '줄소송' 가능성 https://n.news.naver.com/mnews/article/421/0008180285\n",
-      " https://n.news.naver.com/mnews/article/comment/421/0008180285\n",
+      "악성 스팸문자, 발송단계에서 ‘X-ray’로 차단한다 https://n.news.naver.com/mnews/article/032/0003361960\n",
       "\"영락없는 자녀 목소린데\"…AI 보이스피싱, AI로 방지 https://n.news.naver.com/mnews/article/015/0005116490\n",
-      " https://n.news.naver.com/mnews/article/comment/015/0005116490\n"
+      "뤼튼 \"5000만 국민 모두에게 생활형 AI 제공할 것\" https://n.news.naver.com/mnews/article/011/0004471555\n",
+      "“1초 만에 99.5% 정확도로 상품인식” 신세계아이앤씨,  ‘AI 설루션’ 고도화 https://n.news.naver.com/mnews/article/016/0002453935\n",
+      "생명硏, 슈퍼박테리아 내성 극복한 신규 항생제 개발 https://n.news.naver.com/mnews/article/001/0015316565\n",
+      "소액주주 눈높이 맞춘다…한화에어로, 유증 3.6조→2.3조 축소 https://n.news.naver.com/mnews/article/092/0002369838\n",
+      "한화오션, 차세대 드릴십 인도…심해 시추 본격 진출 https://n.news.naver.com/mnews/article/092/0002369836\n",
+      "“보여주면 알아서 설명” 삼성, 갤럭시 S25에 ‘실시간 비주얼 AI’ 도입 https://n.news.naver.com/mnews/article/018/0005982544\n",
+      "\"5G 투자회수도 멀었는데\"…글로벌 통신업계 '6G' 회의론 https://n.news.naver.com/mnews/article/008/0005177554\n",
+      "삼성 1분기 실적 효자는 '갤S25'…2Q '슬림' 판매량 관건 https://n.news.naver.com/mnews/article/014/0005332970\n",
+      "[현장] \"AI, 이제 도구가 아닌 친구\"…뤼튼, '1인 1AI' 시대 연다 https://n.news.naver.com/mnews/article/092/0002369831\n",
+      "의협 “내년 정원 확정해달라…교육 불가능땐 모집인원 줄여야” https://n.news.naver.com/mnews/article/029/0002946712\n",
+      "리플 \"전 세계 금융 시장, 실물자산 토큰화 중심으로 근본 변화\" https://n.news.naver.com/mnews/article/092/0002369827\n",
+      "한국계 NASA 우주인 조니 김 태운 러 우주선, ISS로 발사 https://n.news.naver.com/mnews/article/023/0003898288\n",
+      "“韓 AI 선진국 위해 'AI기술'보다 데이터 확보가 필요” https://n.news.naver.com/mnews/article/030/0003301377\n",
+      "질병청-녹십자 개발 '탄저백신' 품목허가 \"백신주권 확립\" https://n.news.naver.com/mnews/article/014/0005332936\n",
+      "항암제 피하는 암세포 꼼수 발견…악성 폐암도 잡는다 https://n.news.naver.com/mnews/article/081/0003531724\n",
+      "첫 한국계 ‘NASA 우주비행사’ 조니 김, 마침내 지구 궤도로 떠났다 https://n.news.naver.com/mnews/article/032/0003361993\n",
+      "질병청, 세계 첫 단백질 재조합 탄저백신 '배리트락스' 상용화 https://n.news.naver.com/mnews/article/015/0005116525\n",
+      "트럼프 관세, 세계경제 큰 타격…美中 충돌로 더 증폭 https://n.news.naver.com/mnews/article/092/0002369818\n",
+      "[사고]스테이블코인 vs CBDC…디지털금융 대세는 어디로? https://n.news.naver.com/mnews/article/018/0005982461\n",
+      "폐암 면역치료 새 전략 찾았다…면역항암 막는 핵심인자 최초로 발견 https://n.news.naver.com/mnews/article/021/0002701758\n",
+      "\"갤럭시S26 울트라, 카메라 사양 등 전작과 큰 변화 없다\" https://n.news.naver.com/mnews/article/092/0002369817\n",
+      "구영배 \"위시 살려야\" 주장에 피해자들 분통…\"차라리 처벌 받아라\" https://n.news.naver.com/mnews/article/092/0002369816\n",
+      "관세 폭탄에 스마트폰 공장 美로 옮긴다?…\"가능성 희박\" https://n.news.naver.com/mnews/article/092/0002369815\n",
+      "전국에 딱 500대만 풀린다…'한정판 갤럭시S25'의 정체 https://n.news.naver.com/mnews/article/015/0005116508\n",
+      "[6G 코리아] ④ 이통3사, AI-RAN 시장 개척 주도 https://n.news.naver.com/mnews/article/030/0003301337\n",
+      "한바이오 \"모유두세포로 탈모 정복하겠다\" https://n.news.naver.com/mnews/article/015/0005116502\n",
+      "온라인서 예금토큰 결제 지연…9일부터 순차적으로 진행 https://n.news.naver.com/mnews/article/092/0002369813\n",
+      "법인 가상자산 투자 허용, 금융 생태계 지각변동 예고...우덕수 블록데몬 아시아 대표 “기관 대상 상품 본격화” https://n.news.naver.com/mnews/article/030/0003301326\n",
+      "LS전선, 대한전선 상대 특허 최종 승소…양측 상고 포기 https://n.news.naver.com/mnews/article/030/0003301320\n",
+      "사람 태워 산속 누빈다... 늑대 닮은 日 4족보행 로봇 공개 https://n.news.naver.com/mnews/article/023/0003898272\n"
      ]
     }
    ],
