뉴스 제목 추출

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -261,11 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "9f2e4ef8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -297,12 +298,14 @@
     "        for a_tag in a_tag_list:\n",
     "            title = a_tag.text.strip()\n",
     "            link = a_tag[\"href\"]\n",
-    "            print(title, link)"
+    "            print(title, link)\n",
+    "    else :\n",
+    "        print(f\"에러 코드 = {res.status_code}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "858952c6",
    "metadata": {},
    "outputs": [
@@ -311,12 +314,11 @@
      "output_type": "stream",
      "text": [
       "======= Section: 경제 =======\n",
-      "“보여주면 알아서 설명” 삼성, 갤럭시 S25에 ‘실시간 비주얼 AI’ 도입 https://n.news.naver.com/mnews/article/018/0005982544\n",
-      "악성 스팸문자, 발송단계에서 ‘X-ray’로 차단한다 https://n.news.naver.com/mnews/article/032/0003361960\n",
-      "\"영락없는 자녀 목소린데\"…AI 보이스피싱, AI로 방지 https://n.news.naver.com/mnews/article/015/0005116490\n",
-      "뤼튼 \"5000만 국민 모두에게 생활형 AI 제공할 것\" https://n.news.naver.com/mnews/article/011/0004471555\n",
-      "“1초 만에 99.5% 정확도로 상품인식” 신세계아이앤씨,  ‘AI 설루션’ 고도화 https://n.news.naver.com/mnews/article/016/0002453935\n",
-      "생명硏, 슈퍼박테리아 내성 극복한 신규 항생제 개발 https://n.news.naver.com/mnews/article/001/0015316565\n",
+      "이세영 뤼튼 대표 \"생활형 AI로 1인 1AI 시대 연다\" https://n.news.naver.com/mnews/article/003/0013170884\n",
+      "정부, 스미싱 문자 사전 차단하는 '엑스레이' 서비스 시범 운영 https://n.news.naver.com/mnews/article/014/0005332827\n",
+      "SKT '보이스피싱 탐지 AI', IBK銀·에이닷에 탑재 https://n.news.naver.com/mnews/article/008/0005177272\n",
+      "우주청, 우즈베키스탄·이탈리아와 손잡고 우주 국제협력 본격화 https://n.news.naver.com/mnews/article/052/0002177123\n",
+      "신세계I&C, AI 무인매장 솔루션 출시…\"리테일테크 사업 확대\" https://n.news.naver.com/mnews/article/018/0005982179\n",
       "소액주주 눈높이 맞춘다…한화에어로, 유증 3.6조→2.3조 축소 https://n.news.naver.com/mnews/article/092/0002369838\n",
       "한화오션, 차세대 드릴십 인도…심해 시추 본격 진출 https://n.news.naver.com/mnews/article/092/0002369836\n",
       "“보여주면 알아서 설명” 삼성, 갤럭시 S25에 ‘실시간 비주얼 AI’ 도입 https://n.news.naver.com/mnews/article/018/0005982544\n",
@@ -324,6 +326,7 @@
       "삼성 1분기 실적 효자는 '갤S25'…2Q '슬림' 판매량 관건 https://n.news.naver.com/mnews/article/014/0005332970\n",
       "[현장] \"AI, 이제 도구가 아닌 친구\"…뤼튼, '1인 1AI' 시대 연다 https://n.news.naver.com/mnews/article/092/0002369831\n",
       "의협 “내년 정원 확정해달라…교육 불가능땐 모집인원 줄여야” https://n.news.naver.com/mnews/article/029/0002946712\n",
+      "“자문인줄 알았는데” 리멤버, 전직 직원에 내부정보 요구 논란 https://n.news.naver.com/mnews/article/018/0005982502\n",
       "리플 \"전 세계 금융 시장, 실물자산 토큰화 중심으로 근본 변화\" https://n.news.naver.com/mnews/article/092/0002369827\n",
       "한국계 NASA 우주인 조니 김 태운 러 우주선, ISS로 발사 https://n.news.naver.com/mnews/article/023/0003898288\n",
       "“韓 AI 선진국 위해 'AI기술'보다 데이터 확보가 필요” https://n.news.naver.com/mnews/article/030/0003301377\n",
@@ -341,9 +344,7 @@
       "[6G 코리아] ④ 이통3사, AI-RAN 시장 개척 주도 https://n.news.naver.com/mnews/article/030/0003301337\n",
       "한바이오 \"모유두세포로 탈모 정복하겠다\" https://n.news.naver.com/mnews/article/015/0005116502\n",
       "온라인서 예금토큰 결제 지연…9일부터 순차적으로 진행 https://n.news.naver.com/mnews/article/092/0002369813\n",
-      "법인 가상자산 투자 허용, 금융 생태계 지각변동 예고...우덕수 블록데몬 아시아 대표 “기관 대상 상품 본격화” https://n.news.naver.com/mnews/article/030/0003301326\n",
-      "LS전선, 대한전선 상대 특허 최종 승소…양측 상고 포기 https://n.news.naver.com/mnews/article/030/0003301320\n",
-      "사람 태워 산속 누빈다... 늑대 닮은 日 4족보행 로봇 공개 https://n.news.naver.com/mnews/article/023/0003898272\n"
+      "법인 가상자산 투자 허용, 금융 생태계 지각변동 예고...우덕수 블록데몬 아시아 대표 “기관 대상 상품 본격화” https://n.news.naver.com/mnews/article/030/0003301326\n"
      ]
     }
    ],
