API 호출 / 블로그 검색

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -250,40 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "b30f7bf5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n",
-      "128\n",
-      "129\n",
-      "19 ['https://image-comic.pstatic.net/webtoon/823195/92/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_1.jpg', 'https://image-comic.pstatic.net/webtoon/823195/92/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_2.jpg']\n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_1.jpg(154,596 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_2.jpg(188,091 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_3.jpg(247,361 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_4.jpg(190,566 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_5.jpg(174,153 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_6.jpg(205,791 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_7.jpg(133,401 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_8.jpg(179,453 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_9.jpg(190,897 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_10.jpg(140,381 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_11.jpg(179,116 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_12.jpg(227,274 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_13.jpg(124,227 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_14.jpg(172,154 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_15.jpg(194,060 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_16.jpg(134,426 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_17.jpg(210,542 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_18.jpg(233,308 bytes) \n",
-      "Writing to img/20241225183840_5c7e8a5d8b95be2c1c11af6d7cc2d22d_IMAG01_19.jpg(154,503 bytes) \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -386,9 +356,41 @@
    "execution_count": null,
    "id": "bc4ae360-e772-4873-8642-d3494edd34e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"key\":\"0L6hMOEF4zTHZ4Dx\"}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 캡차 키 발급 요청\n"
+    "# 캡차 키 발급 요청\n",
+    "import urllib.request\n",
+    "\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\") # 개발자센터에서 발급받은 Client ID 값\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\") # 개발자센터에서 발급받은 Client Secret 값\n",
+    "code = \"0\"\n",
+    "url = \"https://openapi.naver.com/v1/captcha/nkey?code=\" + code\n",
+    "\n",
+    "# Request 객체생성성\n",
+    "request = urllib.request.Request(url)\n",
+    "\n",
+    "#요청 헤더 설정\n",
+    "request.add_header(\"X-Naver-Client-Id\",client_id)\n",
+    "request.add_header(\"X-Naver-Client-Secret\",client_secret)\n",
+    "\n",
+    "# 요청 보내기\n",
+    "response = urllib.request.urlopen(request)\n",
+    "\n",
+    "# 응답 코드 가져오기기\n",
+    "rescode = response.getcode()\n",
+    "if(rescode==200):\n",
+    "    response_body = response.read()\n",
+    "    print(response_body.decode('utf-8'))\n",
+    "else:\n",
+    "    print(\"Error Code:\" + rescode)\n"
    ]
   },
   {
@@ -396,9 +398,36 @@
    "execution_count": null,
    "id": "7b95b6a0-c218-4792-82a6-da4d80872071",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "캡차 이미지 저장\n"
+     ]
+    }
+   ],
    "source": [
-    "# 캡차 이미지 요청\n"
+    "# 캡차 이미지 요청\n",
+    "import urllib.request\n",
+    "\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\") # 개발자센터에서 발급받은 Client ID 값\n",
+    "client_secret =os.getenv(\"NAVER_CLIENT_SECRET\") # 개발자센터에서 발급받은 Client Secret 값\n",
+    "key = \" \" # 캡차 Key 값 \n",
+    "\n",
+    "url = \"https://openapi.naver.com/v1/captcha/ncaptcha.bin?key=\" + key\n",
+    "request = urllib.request.Request(url)\n",
+    "request.add_header(\"X-Naver-Client-Id\",client_id)\n",
+    "request.add_header(\"X-Naver-Client-Secret\",client_secret)\n",
+    "response = urllib.request.urlopen(request)\n",
+    "rescode = response.getcode()\n",
+    "if(rescode==200):\n",
+    "    print(\"캡차 이미지 저장\")\n",
+    "    response_body = response.read()\n",
+    "    with open('captcha.jpg', 'wb') as f:\n",
+    "        f.write(response_body)\n",
+    "else:\n",
+    "    print(\"Error Code:\" + rescode)"
    ]
   },
   {
@@ -406,10 +435,39 @@
    "execution_count": null,
    "id": "a79076af-2cd0-4de2-8301-316b9130c55e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"result\":true,\"responseTime\":30.68}\n"
+     ]
+    }
+   ],
    "source": [
     "#  사용자 입력값 검증 요청\n",
-    "\n"
+    "import urllib.request\n",
+    "\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\") # 개발자센터에서 발급받은 Client ID 값\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\") # 개발자센터에서 발급받은 Client Secret 값\n",
+    "key = \" \" # 캡차 Key 값\n",
+    "\n",
+    "code = \"1\"\n",
+    "value = \"FU6N\"\n",
+    "url = \"https://openapi.naver.com/v1/captcha/nkey?code=\" + code + \"&key=\" + key + \"&value=\" + value\n",
+    "request = urllib.request.Request(url)\n",
+    "\n",
+    "request.add_header(\"X-Naver-Client-Id\",client_id)\n",
+    "request.add_header(\"X-Naver-Client-Secret\",client_secret)\n",
+    "\n",
+    "response = urllib.request.urlopen(request)\n",
+    "rescode = response.getcode()\n",
+    "\n",
+    "if(rescode==200):\n",
+    "    response_body = response.read()\n",
+    "    print(response_body.decode('utf-8'))\n",
+    "else:\n",
+    "    print(\"Error Code:\" + rescode)"
    ]
   },
   {
@@ -444,34 +502,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "877d0c7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['대구<b>파이썬</b>학원 실전 기술 익힌 곳',\n",
+      "  '▶ 제이의 맛있는 세상 ◀',\n",
+      "  '그때 힘이 되어 준 대구<b>파이썬</b>학원에 대한 글을 써보려 해요! IT 위주로 학습하는 곳 단순히 구직에... 이 '\n",
+      "  '대구<b>파이썬</b>학원은 전직, 현직 강사들이 비전공자도 따라갈 수 있을 정도로 눈높이 교육을 진행해 준다고... ',\n",
+      "  'blog.naver.com/xshinerx',\n",
+      "  'https://blog.naver.com/xshinerx/223787876858'],\n",
+      " ['대전자바학원 <b>파이썬</b> 앱개발 공부하고 취업까지',\n",
+      "  '반짝반짝 너와 나',\n",
+      "  '저는 <b>파이썬</b>부터 시작해 백엔드 개발에 필요한 다양한 과정을 배우기로 결정했어요. <b>파이썬</b>은 최근 많은 사람들이 '\n",
+      "  '주목하고 인기 있는 프로그래밍 언어로 특히 생성 AI 앱을 구축하고 싶다면 필수인 언어였고... ',\n",
+      "  'blog.naver.com/mamansiri',\n",
+      "  'https://blog.naver.com/mamansiri/223750243246']]\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pprint\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from pprint import pprint\n",
+    "\n",
+    "# .env 파일에서 환경 변수 로드\n",
+    "load_dotenv()\n",
+    "\n",
+    "# 환경 변수에서 값 읽기\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\")  # .env 파일의 NAVER_CLIENT_ID\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\")  # .env 파일의 NAVER_CLIENT_SECRET\n",
     "\n",
     "headers = {\n",
-    "    'X-Naver-Client-Id': '',\n",
-    "    'X-Naver-Client-Secret': '',\n",
+    "    'X-Naver-Client-Id': client_id,\n",
+    "    'X-Naver-Client-Secret': client_secret,\n",
     "}\n",
     "\n",
+    "# query string 문자열을 dict 선언\n",
     "payload = {\n",
     "    'query': '파이썬',\n",
     "    'display': 100,\n",
     "    'sort': 'sim'\n",
     "}\n",
     "\n",
-    "url = 'https://openapi.naver.com/v1/search/blog.json'\n",
-    "\n",
+    "url = 'https://openapi.naver.com/v1/search/blog.json' #?query=파이썬&display=100&sort=sim\n",
     "\n",
     "# requests get(url, params, headers) 요청 \n",
+    "res = requests.get(url, params=payload, headers=headers)\n",
+    "# json() 함수로 응답 결과 가져오기\n",
+    "items_data = res.json()['items']\n",
+    "#print(type(res.json()))\n",
+    "#print(len(items_data), type(items_data), type(items_data[0]))\n",
     "\n",
-    "# json() 함수로 응답 결과 가져오오기\n",
+    "#[{},{},{}] \n",
+    "# [] - 100 개의 데이터, {title:'',link:''} - 1개의 블로그 글 데이터\n",
+    "\n",
     "# 'title' , 'bloggername' , 'description' , 'bloggerlink' , 'link'\n",
+    "items_list = list()\n",
+    "item_list = []\n",
+    "for item in items_data[:2]:\n",
+    "#     print(item)\n",
+    "    item_list.append(item['title'])\n",
+    "    item_list.append(item['bloggername'])\n",
+    "    item_list.append(item['description'])\n",
+    "    item_list.append(item['bloggerlink'])\n",
+    "    item_list.append(item['link'])\n",
     "\n",
-    "# 'data/nhnblog.txt' 파일 생성하기\n"
+    "    items_list.append(item_list)\n",
+    "    item_list = []\n",
+    "\n",
+    "pprint(items_list) #[[],[]]\n",
+    "\n",
+    "# 'data/nhnblog.txt' 파일 생성하기\n",
+    "with open('data/nhnblog.txt','w',encoding=\"utf-8\")as file:\n",
+    "    for items in items_list:\n",
+    "        for item in items:\n",
+    "            item = item + '\\n'\n",
+    "            file.write(item)\n",
+    "        file.write('-'*150+'\\n')"
    ]
   }
  ],
