pandas.DataFrame 실습

--- a/04.Melon100차트_데이터파싱_DB저장.ipynb
+++ b/04.Melon100차트_데이터파싱_DB저장.ipynb
@@ -315,7 +315,81 @@
     "# 좋아요 건수의 평균\n",
     "mean_like_value = song_df['좋아요'].mean()\n",
     "song_df.loc[song_df['좋아요']>= mean_like_value].reset_index(drop=True)\n",
-    "song_df.loc[song_df['좋아요']>= mean_like_value].sort_values(by='좋아요',ascending=False).reset_index(drop=True) #디폴트 ascending=True"
+    "song_df.loc[song_df['좋아요']>= mean_like_value,song_df.columns.drop(['detail_url','가사'])].sort_values(by='좋아요',ascending=False).reset_index(drop=True) #디폴트 ascending=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>곡명</th>\n",
+       "      <th>가수</th>\n",
+       "      <th>앨범</th>\n",
+       "      <th>발매일</th>\n",
+       "      <th>장르</th>\n",
+       "      <th>detail_url</th>\n",
+       "      <th>좋아요</th>\n",
+       "      <th>가사</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>어제보다 슬픈 오늘</td>\n",
+       "      <td>우디 (Woody)</td>\n",
+       "      <td>어제보다 슬픈 오늘</td>\n",
+       "      <td>2025.03.31</td>\n",
+       "      <td>발라드</td>\n",
+       "      <td>https://www.melon.com/song/detail.htm?songId=3...</td>\n",
+       "      <td>5595</td>\n",
+       "      <td>밤새도록 내리던 소낙비가 네 모습을 지울까네가 떠난 어제보다도 난 오늘이 더 슬퍼지...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            곡명          가수          앨범         발매일   장르  \\\n",
+       "93  어제보다 슬픈 오늘  우디 (Woody)  어제보다 슬픈 오늘  2025.03.31  발라드   \n",
+       "\n",
+       "                                           detail_url   좋아요  \\\n",
+       "93  https://www.melon.com/song/detail.htm?songId=3...  5595   \n",
+       "\n",
+       "                                                   가사  \n",
+       "93  밤새도록 내리던 소낙비가 네 모습을 지울까네가 떠난 어제보다도 난 오늘이 더 슬퍼지...  "
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 발매일\n",
+    "song_df['발매일'].max()\n",
+    "song_df.loc[song_df['발매일']==song_df['발매일'].max()]"
    ]
   },
   {
