--- a/03-1.행정구역정보_분석과시각화.ipynb
+++ b/03-1.행정구역정보_분석과시각화.ipynb
@@ -4700,54 +4700,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 124,
    "id": "a02147d0-0a8f-4f7f-b44b-355f7db71a54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "광역시도\n",
+       "강원도         1429438\n",
+       "경기도        11744210\n",
+       "경상남도        3144487\n",
+       "경상북도        2508964\n",
+       "광주광역시       1438209\n",
+       "대구광역시       2378450\n",
+       "대전광역시       1467677\n",
+       "부산광역시       3323591\n",
+       "서울특별시       9394807\n",
+       "세종특별자치시      191233\n",
+       "울산광역시       1105585\n",
+       "인천광역시       2766575\n",
+       "전라남도        1700563\n",
+       "전라북도        1739048\n",
+       "제주특별자치도      575873\n",
+       "충청남도        1946129\n",
+       "충청북도        1484720\n",
+       "Name: 인구수, dtype: int64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Series 객체 사용 - 광역시도별 인구수의 합계 \n",
-    "# SeriesGroupBy object\n"
+    "# SeriesGroupBy object\n",
+    "data['인구수'].groupby(data['광역시도']).sum() #값을 전달 -> sum() 집계함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 132,
    "id": "08aba13d-2400-41e1-9c92-6cdb51dfaf1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x17e07a420>"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# DataFrame 객체 사용 - 광역시도별 인구수의 합계 \n",
-    "# DataFrameGroupBy object\n"
+    "# DataFrameGroupBy object\n",
+    "data.groupby('광역시도')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 134,
    "id": "89f468db-bd29-47b9-8363-77d1073260ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x17e316750>"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# DataFrameGroupBy \n"
+    "# DataFrameGroupBy \n",
+    "data.groupby('광역시도')['인구수']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 135,
    "id": "7989a0af-305e-4baf-bfe4-34f79f119e0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "광역시도\n",
+       "경기도        11744210\n",
+       "서울특별시       9394807\n",
+       "부산광역시       3323591\n",
+       "경상남도        3144487\n",
+       "인천광역시       2766575\n",
+       "경상북도        2508964\n",
+       "대구광역시       2378450\n",
+       "충청남도        1946129\n",
+       "전라북도        1739048\n",
+       "전라남도        1700563\n",
+       "충청북도        1484720\n",
+       "대전광역시       1467677\n",
+       "광주광역시       1438209\n",
+       "강원도         1429438\n",
+       "울산광역시       1105585\n",
+       "제주특별자치도      575873\n",
+       "세종특별자치시      191233\n",
+       "Name: 인구수, dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 광역시도별 행정구역별 인구수의 합계\n"
+    "# 광역시도별 행정구역별 인구수의 합계\n",
+    "data.groupby('광역시도')['인구수'].sum().sort_values(ascending=False) \n",
+    "# sort_values 에서 컬럼명을 안주는 이유? \n",
+    "# -> 이미 시리즈 객체를 가져옴 (컬럼 1개) -> 컬럼 하나라서 줄 필요없다 ~ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 142,
+   "id": "99425c49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>인구수</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>면적</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>광역시도</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>강원도</th>\n",
+       "      <td>1429438</td>\n",
+       "      <td>173</td>\n",
+       "      <td>68</td>\n",
+       "      <td>16874.810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>경기도</th>\n",
+       "      <td>11744210</td>\n",
+       "      <td>182</td>\n",
+       "      <td>162</td>\n",
+       "      <td>10179.743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>경상남도</th>\n",
+       "      <td>3144487</td>\n",
+       "      <td>123</td>\n",
+       "      <td>313</td>\n",
+       "      <td>10437.460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>경상북도</th>\n",
+       "      <td>2508964</td>\n",
+       "      <td>229</td>\n",
+       "      <td>240</td>\n",
+       "      <td>19021.850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>광주광역시</th>\n",
+       "      <td>1438209</td>\n",
+       "      <td>12</td>\n",
+       "      <td>99</td>\n",
+       "      <td>501.280</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            인구수    x    y         면적\n",
+       "광역시도                                \n",
+       "강원도     1429438  173   68  16874.810\n",
+       "경기도    11744210  182  162  10179.743\n",
+       "경상남도    3144487  123  313  10437.460\n",
+       "경상북도    2508964  229  240  19021.850\n",
+       "광주광역시   1438209   12   99    501.280"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('광역시도').sum(numeric_only=True).head() #수치타입만 sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "id": "3fdb53a2-4111-4cdc-bc26-d14408cf85f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data/광역시도별행정구역별인구수의합계.xlsx 파일로 저장하기\n"
+    "# 광역시도별 행정구역별 groupby 객체를 group_df 변수에 저장\n",
+    "# group_df를 data/광역시도별행정구역별인구수의합계.xlsx 파일로 저장하기\n",
+    "group_df = data.groupby(['광역시도','행정구역'])['인구수'].sum()\n",
+    "group_df.to_excel('data/광역시도별행정구역별인구수의합계.xlsx',sheet_name='인구수')"
    ]
   },
   {
@@ -4761,7 +4949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 147,
    "id": "242f05e1-03a9-488f-b598-dd7e4970dbf4",
    "metadata": {},
    "outputs": [],
@@ -4771,7 +4959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 148,
    "id": "b3de0503-4e24-4882-a778-ef60a9d9883c",
    "metadata": {},
    "outputs": [],
@@ -4808,7 +4996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 149,
    "id": "c56d6f9f-4126-4c42-bf5b-201e1a81b015",
    "metadata": {},
    "outputs": [],
@@ -4818,7 +5006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 150,
    "id": "737f50b7-6642-454c-9895-f5a9d9d1c439",
    "metadata": {},
    "outputs": [],
@@ -4828,7 +5016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 151,
    "id": "2babd22a-7b7c-4d87-bfb4-8d113eeca586",
    "metadata": {},
    "outputs": [],
@@ -4848,7 +5036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 152,
    "id": "f774da3c-a6c6-4537-889f-9a4688c55754",
    "metadata": {},
    "outputs": [],
@@ -4859,7 +5047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 153,
    "id": "18fed7bd-2728-432a-95bd-da906edc0354",
    "metadata": {},
    "outputs": [],
@@ -4869,7 +5057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 154,
    "id": "89cab69e-ea06-4a17-bf39-ec08f87152e8",
    "metadata": {},
    "outputs": [],
@@ -4879,7 +5067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 155,
    "id": "5be8d81f-d262-4968-9b30-a7871c695b79",
    "metadata": {},
    "outputs": [],
@@ -4900,7 +5088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 156,
    "id": "a6d52c44-6967-4f05-9241-d85fbddd414c",
    "metadata": {},
    "outputs": [],
@@ -4910,7 +5098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 157,
    "id": "3f6fa9fa-cc69-40db-9066-2dce3734808b",
    "metadata": {},
    "outputs": [
@@ -4935,7 +5123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 158,
    "id": "2a46d1a7-f0e3-4734-ba1a-b35c33443abe",
    "metadata": {},
    "outputs": [],
@@ -4947,7 +5135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 159,
    "id": "12c6d5b2-1312-4bb6-b9c8-3d15a5e8204f",
    "metadata": {},
    "outputs": [],
@@ -4960,7 +5148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 160,
    "id": "34468317-4ed8-4d94-89b7-792e8c7af781",
    "metadata": {},
    "outputs": [],
