--- a/08.Selenium사용_GitHub로그인.ipynb
+++ b/08.Selenium사용_GitHub로그인.ipynb
@@ -10,33 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: webdriver-manager\n",
-      "Version: 4.0.1\n",
-      "Summary: Library provides the way to automatically manage drivers for different browsers\n",
-      "Home-page: https://github.com/SergeyPirogov/webdriver_manager\n",
-      "Author: Sergey Pirogov\n",
-      "Author-email: automationremarks@gmail.com\n",
-      "License: \n",
-      "Location: c:\\users\\vega2\\anaconda3\\lib\\site-packages\n",
-      "Requires: packaging, python-dotenv, requests\n",
-      "Required-by: \n"
+      "Requirement already satisfied: webdriver-manager in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (4.0.2)\n",
+      "Requirement already satisfied: requests in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from webdriver-manager) (2.32.3)\n",
+      "Requirement already satisfied: python-dotenv in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from webdriver-manager) (0.21.0)\n",
+      "Requirement already satisfied: packaging in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from webdriver-manager) (24.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from requests->webdriver-manager) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from requests->webdriver-manager) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from requests->webdriver-manager) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jo-eunji/anaconda3/lib/python3.12/site-packages (from requests->webdriver-manager) (2025.1.31)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip show webdriver-manager"
+    "%pip install webdriver-manager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -44,35 +43,36 @@
      "output_type": "stream",
      "text": [
       "Name: selenium\n",
-      "Version: 4.19.0\n",
-      "Summary: \n",
-      "Home-page: https://www.selenium.dev\n",
+      "Version: 4.31.0\n",
+      "Summary: Official Python bindings for Selenium WebDriver.\n",
+      "Home-page: \n",
       "Author: \n",
       "Author-email: \n",
       "License: Apache 2.0\n",
-      "Location: c:\\users\\vega2\\anaconda3\\lib\\site-packages\n",
-      "Requires: certifi, trio, trio-websocket, typing_extensions, urllib3\n",
-      "Required-by: \n"
+      "Location: /Users/jo-eunji/anaconda3/lib/python3.12/site-packages\n",
+      "Requires: certifi, trio, trio-websocket, typing_extensions, urllib3, websocket-client\n",
+      "Required-by: \n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
     "#pip install selenium\n",
-    "!pip show selenium"
+    "%pip show selenium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'4.19.0'"
+       "'4.31.0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.7\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.8\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.9\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.10\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.11\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"49d24e74e1e36dcb4e6c84969fc7d317\", element=\"f.EBB456DCB53BA767F54BD286745BE629.d.80D9A70D22D9332EB2FC29E725C63738.e.12\")>]\n",
+      "[<selenium.webdriver.remote.webelement.WebElement (session=\"39f4ba643261bafb84638685cb083188\", element=\"f.4FDE79EA3895BA9BB7ACCC8C7EC1AC65.d.474A7EB87586C95255BCD8DC47AE4A98.e.34\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"39f4ba643261bafb84638685cb083188\", element=\"f.4FDE79EA3895BA9BB7ACCC8C7EC1AC65.d.474A7EB87586C95255BCD8DC47AE4A98.e.35\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"39f4ba643261bafb84638685cb083188\", element=\"f.4FDE79EA3895BA9BB7ACCC8C7EC1AC65.d.474A7EB87586C95255BCD8DC47AE4A98.e.36\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"39f4ba643261bafb84638685cb083188\", element=\"f.4FDE79EA3895BA9BB7ACCC8C7EC1AC65.d.474A7EB87586C95255BCD8DC47AE4A98.e.37\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"39f4ba643261bafb84638685cb083188\", element=\"f.4FDE79EA3895BA9BB7ACCC8C7EC1AC65.d.474A7EB87586C95255BCD8DC47AE4A98.e.38\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"39f4ba643261bafb84638685cb083188\", element=\"f.4FDE79EA3895BA9BB7ACCC8C7EC1AC65.d.474A7EB87586C95255BCD8DC47AE4A98.e.39\")>]\n",
       "Python <class 'selenium.webdriver.remote.webelement.WebElement'>\n",
       "PSF <class 'selenium.webdriver.remote.webelement.WebElement'>\n",
       "Docs <class 'selenium.webdriver.remote.webelement.WebElement'>\n",
@@ -124,14 +124,14 @@
     "#webdriver에 포함된 Chrome 객체를 생성 - chromedriver.exe 사용해서\n",
     "\n",
     "#li 엘리먼트 선택해서 가져오기\n",
-    "li_tags = driver.find_elements(By.CSS_SELECTOR,'div#top ul.menu li')\n",
+    "li_tags = driver.find_elements(By.CSS_SELECTOR,'div#top ul.menu li') #css_selector : 복잡한 선택에 유용함\n",
     "print(li_tags)\n",
     "#pypi 엘리먼트를 찾아서 저장할 변수 선언\n",
     "pypi = None\n",
     "for li_tag in li_tags:\n",
     "    print(li_tag.text, type(li_tag))\n",
     "    if li_tag.text == 'PyPI':\n",
-    "        pypi = li_tag\n",
+    "        pypi = li_tag \n",
     "        \n",
     "time.sleep(3)\n",
     "\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,21 +207,21 @@
     "\n",
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "#네이버 포털에 요청 보내기\n",
-    "driver.get('https://www.naver.com/')\n",
+    "driver.get('https://www.naver.com/') \n",
     "time.sleep(2)\n",
     "\n",
-    "#검색어 엘리먼트 가져오기\n",
+    "#검색어 input 엘리먼트 가져오기\n",
     "search_tag = driver.find_element(By.CSS_SELECTOR,'#query')\n",
     "#print(search_tag)\n",
     "\n",
     "#검색창에 파이썬 키워드를 입력한다.\n",
-    "search_tag.send_keys('python')\n",
+    "search_tag.send_keys('파이썬')\n",
     "#엔터를 입력한다.\n",
     "search_tag.send_keys(Keys.ENTER)\n",
     "time.sleep(5)\n",
     "\n",
-    "#검색된 결과 중에서 a tag 가져오기 <a class='lnk_tit'>\n",
-    "a_tags = driver.find_elements(By.CSS_SELECTOR,'a.lnk_tit')\n",
+    "#검색된 결과 중에서 a tag 가져오기 <a class='link_tit'>\n",
+    "a_tags = driver.find_elements(By.CSS_SELECTOR,'a.link_tit')\n",
     "if a_tags:\n",
     "    #첫번째 a tag 선택하고, click() 함수 호출\n",
     "    a_tags[0].click()\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
