깃허브로그인 / Authentication code 안됨

--- a/08.Selenium사용_GitHub로그인.ipynb
+++ b/08.Selenium사용_GitHub로그인.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,29 @@
      "output_type": "stream",
      "text": [
       "login_ok True\n",
-      "'WebDriver' object has no attribute 'find_elements_by_name'\n"
+      "Message: invalid selector: An invalid or illegal selector was specified\n",
+      "  (Session info: chrome=135.0.7049.85); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#invalid-selector-exception\n",
+      "Stacktrace:\n",
+      "0   chromedriver                        0x000000010318adec cxxbridge1$str$ptr + 2817040\n",
+      "1   chromedriver                        0x0000000103183088 cxxbridge1$str$ptr + 2784940\n",
+      "2   chromedriver                        0x0000000102cca8d8 cxxbridge1$string$len + 93028\n",
+      "3   chromedriver                        0x0000000102cd04dc cxxbridge1$string$len + 116584\n",
+      "4   chromedriver                        0x0000000102cd2818 cxxbridge1$string$len + 125604\n",
+      "5   chromedriver                        0x0000000102cd28c0 cxxbridge1$string$len + 125772\n",
+      "6   chromedriver                        0x0000000102d11270 cxxbridge1$string$len + 382204\n",
+      "7   chromedriver                        0x0000000102d527b8 cxxbridge1$string$len + 649796\n",
+      "8   chromedriver                        0x0000000102d05a80 cxxbridge1$string$len + 335116\n",
+      "9   chromedriver                        0x000000010314fc74 cxxbridge1$str$ptr + 2575000\n",
+      "10  chromedriver                        0x0000000103152f40 cxxbridge1$str$ptr + 2588004\n",
+      "11  chromedriver                        0x000000010312f9fc cxxbridge1$str$ptr + 2443296\n",
+      "12  chromedriver                        0x00000001031537bc cxxbridge1$str$ptr + 2590176\n",
+      "13  chromedriver                        0x0000000103120af0 cxxbridge1$str$ptr + 2382100\n",
+      "14  chromedriver                        0x00000001031739a0 cxxbridge1$str$ptr + 2721732\n",
+      "15  chromedriver                        0x0000000103173b2c cxxbridge1$str$ptr + 2722128\n",
+      "16  chromedriver                        0x0000000103182cd4 cxxbridge1$str$ptr + 2783992\n",
+      "17  libsystem_pthread.dylib             0x0000000190e7c2e4 _pthread_start + 136\n",
+      "18  libsystem_pthread.dylib             0x0000000190e770fc thread_start + 8\n",
+      "\n"
      ]
     }
    ],
@@ -290,12 +312,14 @@
     "#time.sleep(2)\n",
     "\n",
     "#id와 password를 엘리먼트 찾고, 값을 입력하기\n",
-    "driver.find_element(By.CSS_SELECTOR,'input#login_field').send_keys('user')\n",
-    "driver.find_element(By.CSS_SELECTOR,'input#password').send_keys('pass')\n",
+    "driver.find_element(By.CSS_SELECTOR,'input#login_field').send_keys('lemongza')\n",
+    "driver.find_element(By.CSS_SELECTOR,'input#password').send_keys('')\n",
     "time.sleep(2)\n",
     "\n",
     "# #password필드에서 엔터치기\n",
     "driver.find_element(By.CSS_SELECTOR,'input#password').send_keys(Keys.RETURN)\n",
+    "\n",
+    "#Authentication code 입력해야해서 안넘어감 ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ\n",
     "\n",
     "login_ok = None\n",
     "try:        \n",
@@ -315,7 +339,7 @@
     "if login_ok:    \n",
     "    try:\n",
     "        # 아바타 버튼 선택해서 클릭\n",
-    "        avatar_img = driver.find_elements(By.CSS_SELECTOR, 'span.Button-label img')\n",
+    "        avatar_img = driver.find_elements(By.CSS_SELECTOR, 'span.87Button-label img')\n",
     "        if avatar_img:\n",
     "            avatar_img[0].click()\n",
     "            time.sleep(4)\n",
@@ -356,27 +380,6 @@
     "time.sleep(3)\n",
     "driver.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
